tests/dupe-ty-var-val/out.txt
error: duplicate type variable: 'a
  ┌─ err.sml:1:10
  │
1 │ val ('a, 'a) _: 'a list = []
  │          ^^

typechecking failed
